[package]
name = "bevy_panorbit_wasd_camera"
version = "0.32.0"
authors = ["Plonq", "milkcask"]
edition = "2021"
description = "A basic pan and orbit camera in Bevy with WASD support"
keywords = ["gamedev", "bevy", "orbit", "camera", "wasd"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/milkcask/bevy_panorbit_wasd_camera"
homepage = "https://github.com/milkcask/bevy_panorbit_wasd_camera"
readme = "README.md"

[features]
bevy_egui = ["dep:bevy_egui"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_camera",
    "bevy_window",
] }
bevy_egui = { version = "0.38", optional = true, default-features = false }

[dev-dependencies]
bevy = { version = "0.17" }
float-cmp = "0.10.0"
bevy_egui = { version = "0.38", default-features = false, features = [
    "render",
    "default_fonts",
] }

[[example]]
name = "egui"
required-features = ["bevy_egui"]

[[example]]
name = "egui_multiple_windows"
required-features = ["bevy_egui"]
