[package]
name = "bevy_panorbit_wasd_camera"
version = "0.35.1"
authors = ["Plonq", "milkcask"]
edition = "2021"
description = "A basic pan and orbit camera in Bevy with WASD support"
keywords = ["gamedev", "bevy", "orbit", "camera", "wasd"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/milkcask/bevy_panorbit_wasd_camera"
homepage = "https://github.com/milkcask/bevy_panorbit_wasd_camera"
readme = "README.md"

[features]
bevy_egui = ["dep:bevy_egui"]

[dependencies]
bevy = { version = "0.19", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_camera",
    "bevy_window",
] }
bevy_egui = { version = "0.40", optional = true, default-features = false }

[dev-dependencies]
bevy = { version = "0.19", default-features = false, features = ["3d"] }
float-cmp = "0.10.0"
bevy_egui = { version = "0.40", default-features = false, features = [
    "render",
    "default_fonts",
] }

[[example]]
name = "wasd_frame_rate"
required-features = ["bevy/ui"]

[[example]]
name = "egui"
required-features = ["bevy_egui"]

[[example]]
name = "egui_multiple_windows"
required-features = ["bevy_egui"]

[[example]]
name = "orthographic"
required-features = ["bevy/ui"]

[[example]]
name = "pausing"
required-features = ["bevy/ui"]
